# pkgs-categorizer

./: Notices.txt  README.en.md  README.md  req.txt
src/: config.py  dot.py  log.py  (+9 more)
src/algorithm/VectorLayerer/: .gitignore  README.md  layer.txt  pyproject.toml
src/algorithm/VectorLayerer/configs/: most_degree_l2_norm.py  most_degree_l2_norm_bin.py  random_number_l2_norm.py  random_percent_l1_norm.py  random_percent_l2_norm.py  random_percent_linf_norm.py
src/algorithm/VectorLayerer/data/: 2022-1128-src-human(with-multi-label).txt  2022-1128-src-input.txt  2022-1228-bin-human.txt  2022-1228-bin-input.txt  2022-1228-src-human.txt  2022-1228-src-input.txt  filtered_human_1107.txt  filtered_input_merged.txt  human_1107.txt  input_10-10(remove).txt  人工分类(含多个评价).txt  人工标签1107_formatted.txt
src/algorithm/VectorLayerer/hierarchy/: version.py
src/algorithm/VectorLayerer/hierarchy/config/: __init__.py  config.py
src/algorithm/VectorLayerer/hierarchy/core/: __init__.py  common_types.py  graph.py
src/algorithm/VectorLayerer/hierarchy/methods/: __init__.py
src/algorithm/VectorLayerer/hierarchy/methods/anchors_generators/: __init__.py  builder.py  degree.py  randoms.py
src/algorithm/VectorLayerer/hierarchy/methods/distance_metrics/: __init__.py  builder.py  norm.py
src/algorithm/VectorLayerer/hierarchy/runners/: __init__.py  anchor_based.py  builder.py
src/algorithm/VectorLayerer/hierarchy/utils/: __init__.py  data.py  seed.py  statistics.py
src/algorithm/VectorLayerer/tools/: 111.txt  exec_run.py  run.py
src/algorithm/VectorLayerer/tools/work_dirs/: 111.txt
(+38 files in other folders)
