[tool.poetry]
name = "hierarchy"
version = "0.0.1"
description = "Linux package hierarchy"
authors = ["wutongshenqiu <44188071+wutongshenqiu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
yapf = "^0.32.0"
addict = "^2.4.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
